# MetalEngine

./: CMakeLists.txt  LICENSE  README.md
MetalEngine/: CMakeLists.txt  MetalEngine.cpp  MetalEngine.h  compileshader.bat
MetalEngine/shaders/directx/: basicshader.hlsl  fog.hlsl
MetalEngine/shaders/opengl/: basicshader.glsl
MetalEngine/shaders/vulkan/: fog.frag  fog.vert  simpleshader.frag.spv  simpleshader.vert
MetalEngine/src/: MDataPackage.c  MError.c  MMac.mm  MMath.cpp  MVulkanRenderer.cpp
MetalEngine/src/headers/: MDataPackage.h  MError.h  MMath.hpp  MTexture.hpp  MTypes.hpp  MVulkanRenderer.hpp
MetalEngine/src/headers/macos/: MMac.h
